<resources>
    <string name="app_name">Scroll</string>
    <string name="action_settings">Settings</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="animation">Animation</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="documentary">Documentary</string>
    <string name="fantasy">Fantasy</string>
    <string name="history">History</string>
    <string name="horror">Horror</string>
    <string name="mystery">Mystery</string>
    <string name="romance">Romance</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="war">War</string>
    <string name="western">Western</string>
    <string name="music">Music</string>
    <string name="drama">Drama</string>
    <string name="family">Family</string>
    <string name="tv_movie">TV Movie</string>
    <string name="thriller">Thriller</string>
    <string name="noDescription">no description found...</string>
</resources>
